plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	implementation(platform("me.paulschwarz:spring-dotenv-bom:5.1.0"))
	developmentOnly("me.paulschwarz:springboot3-dotenv")
	implementation 'com.opencsv:opencsv:5.9'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
	implementation(platform("me.paulschwarz:spring-dotenv-bom:5.1.0"))
	developmentOnly("me.paulschwarz:springboot3-dotenv")
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.twilio.sdk:twilio:9.0.0'
	implementation 'org.apache.commons:commons-text:1.10.0' //문자열 유사도 계산
}

tasks.named('test') {
	useJUnitPlatform()
}